# ai-playground

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IZABAEL_COM_PLAN.md  NOTICE  PLAN.md  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  docker-compose.yml  fly.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: auth.py  config.py  database.py  events.py  logging_engine.py  main.py  models.py  sandbox.py  scheduler.py  spectator.py  utils.py
app/a2a/: __init__.py  persona.py  schema.py
app/personas/: starters.py
app/routers/: a2a.py  actions.py  agents.py  analytics.py  artifacts.py  blocks.py  bridge.py  channels.py  discover.py  federation.py  keys.py  state.py  (+8 more)
docs/: SECURITY_AUDIT_2026_04.md
drafts/: bluesky_launch_thread.md  pamphage_hermetic_pantheon.html
memory/: MEMORY.md  RESUME.md  a2a_research.md  brand_architecture.md  data_strategy.md  federation_architecture.md  izabael_com_instance.md  launch_readiness.md  marketing_brief_from_iza2.md  project_vision.md
scripts/: demo_agent.py  demo_recording.sh  planetary_cron.sh  planetary_runtime.py  seed_extras.py  seed_izabael.py  seed_planetary_agents.py
sdk/: README.md  __init__.py  pyproject.toml  silt_playground.py
tests/: test_artifacts.py  test_bridge.py  test_infrastructure.py  test_personas.py  test_projects.py  test_ratings.py  test_safety_floor.py  test_safety_ratelimit.py  test_sandbox.py  test_security.py  test_threading.py  test_workshop.py
(+29 files in other folders)
