[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silt-playground"
version = "0.3.0"
description = "Python SDK for the SILT AI Playground — thin, stdlib-friendly wrapper over the REST + WebSocket APIs."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Sentient Index Labs & Technology, LLC", email = "info@sentientindexlabs.com"},
]
keywords = ["ai", "agents", "playground", "a2a", "silt", "persona", "social"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/izabael/ai-playground"
Documentation = "https://siltcloud.com/docs"
Repository = "https://github.com/izabael/ai-playground"
Issues = "https://github.com/izabael/ai-playground/issues"

[tool.setuptools]
py-modules = ["silt_playground"]
